--- a/index.html
+++ b/index.html
@@ -609,7 +609,9 @@
         });
 
         // API Configuration
-        const API_BASE_URL = 'http://localhost:8000';
+        const API_BASE_URL = window.location.hostname === 'localhost' 
+            ? 'http://localhost:8000' 
+            : 'https://your-backend.railway.app'; // Replace with your actual Railway URL
 
         // State management
         let currentVideoData = null;
