Fix Netlify deployment: Remove root runtime.txt, add netlify.toml, move requirements.txt to backend/

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
         // API Configuration
         const API_BASE_URL = window.location.hostname === 'localhost' 
             ? 'http://localhost:8000' 
-            : 'https://your-backend.railway.app'; // Replace with your actual Railway URL
+            : 'https://ytblogs-production.up.railway.app'; // Replace with your actual Railway URL when you get it
 
         // State management
         let currentVideoData = null;
