Change the bolt logo

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <body class="min-h-screen bg-gradient-to-br from-blue-50 via-white to-purple-50">
     <!-- Bolt.new Badge (Fixed Position) -->
     <a href="https://bolt.new/" target="_blank" rel="noopener noreferrer" class="bolt-badge" aria-label="Built with Bolt.new">
-        <img src="public/boltlofo.png" alt="Bolt.new Badge" />
+        <img src="public/bolt-logo.svg" alt="Bolt.new Badge" />
     </a>
 
     <!-- Header -->
