--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
                 <div class="mt-6 text-center">
                     <p class="text-gray-600 text-sm">
-                        Supported formats: youtube.com/watch, youtu.be, youtube.com/embed
+                        Supported formats: youtube.com/watch, youtube, youtube.com/embed
                     </p>
                 </div>
             </div>
