--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>YouTube to Blog Converter - AI-Powered Content Transformation | Bolt.new Hackathon</title>
+    <title>YouTube to Blog Converter - AI-Powered Content Transformation</title>
     <meta name="description" content="Transform any YouTube video into professionally formatted blog posts using advanced AI technology. Built during Bolt.new's world's largest hackathon. Free, fast, and easy to use.">
     <meta name="keywords" content="YouTube to blog, AI content creation, video transcription, blog generator, content marketing, Bolt.new hackathon, video to text">
     <meta name="author" content="Bolt.new Hackathon Team">
@@ -634,10 +634,7 @@
                 <div class="flex flex-col md:flex-row items-center justify-between space-y-4 md:space-y-0">
                     <!-- Copyright -->
                     <div class="text-gray-400 text-sm">
-                        © 2024 YT2Blog. Built with ❤️ using 
-                        <a href="https://bolt.new" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-blue-300 transition-colors">
-                            Bolt.new
-                        </a>
+                        © 2024 YT2Blog.
                     </div>
 
                     <!-- Tech Stack -->
